plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.toy.nar'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	jooqGenerator
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jooq'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:mysql'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'com.opencsv:opencsv:5.9'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//test log
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	implementation 'com.google.api-client:google-api-client:2.0.0'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'

	implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
	implementation 'com.google.firebase:firebase-admin:9.7.0'

	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'

	implementation 'org.xerial:sqlite-jdbc'
	implementation 'org.hibernate.orm:hibernate-community-dialects'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
	implementation 'org.jsoup:jsoup:1.16.1'

	// Elasticsearch
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	// Security & OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	jooqGenerator 'org.jooq:jooq-codegen'
	jooqGenerator 'com.mysql:mysql-connector-j'
}

sourceSets {
	main {
		java {
			srcDir 'src/main/generated'
		}
	}
}

tasks.register('generateJooq', JavaExec) {
	group = 'jooq'
	description = 'Generate jOOQ sources from the local benchmark database schema.'
	classpath = configurations.jooqGenerator
	mainClass = 'org.jooq.codegen.GenerationTool'
	args = [file('src/main/resources/jooq-codegen.xml').absolutePath]
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperties System.properties.findAll { key, _ ->
		key.startsWith('benchmark.') || key.startsWith('deadlock.') || key.startsWith('dataintegrity.') || key.startsWith('fullcontext.')
	}
}

tasks.withType(JavaCompile) {
	options.compilerArgs.add '-parameters'
}
